--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.0",
     "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3",
     "source-map-loader": "^1.0.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
