--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@babel/runtime": "^7.11.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-redux": "^7.2.1",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
